<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="casual"
        android:text="@string/title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:srcCompat="@drawable/grid" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="342dp"
        android:layout_height="342dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <TableRow
            android:layout_width="342dp"
            android:layout_height="114dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_1"
                android:onClick="playerTap"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_2"
                android:onClick="playerTap"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_3"
                android:onClick="playerTap"
                android:tag="2" />
        </TableRow>

        <TableRow
            android:layout_width="342dp"
            android:layout_height="114dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_4"
                android:onClick="playerTap"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_5"
                android:onClick="playerTap"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_6"
                android:onClick="playerTap"
                android:tag="5" />
        </TableRow>

        <TableRow
            android:layout_width="342dp"
            android:layout_height="114dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_7"
                android:onClick="playerTap"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_8"
                android:onClick="playerTap"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_9"
                android:onClick="playerTap"
                android:tag="8" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/credit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>